<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/general_settings">
        <SwitchPreference
            app:defaultValue="false"
            app:icon="@drawable/ic_communication_phonelink_ring"
            app:key="isAutoConnect"
            app:summary="@string/auto_connect_summary"
            app:title="@string/auto_connect" />
        <moe.matsuri.nb4a.ui.ColorPickerPreference
            android:title="@string/theme"
            app:icon="@drawable/ic_baseline_color_lens_24"
            app:key="appTheme" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/night_mode"
            app:entryValues="@array/int_array_4"
            app:icon="@drawable/ic_baseline_wb_sunny_24"
            app:key="nightTheme"
            app:title="@string/night_mode"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="vpn"
            app:entries="@array/service_modes"
            app:entryValues="@array/service_mode_values"
            app:icon="@drawable/ic_device_developer_mode"
            app:key="serviceMode"
            app:title="@string/service_mode"
            app:useSimpleSummaryProvider="true" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/tun_implementation"
            app:entryValues="@array/int_array_3"
            app:icon="@drawable/ic_baseline_flip_camera_android_24"
            app:key="tunImplementation"
            app:title="@string/tun_implementation"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:icon="@drawable/ic_navigation_apps"
            app:key="proxyApps"
            app:summary="@string/proxied_apps_summary"
            app:title="@string/proxied_apps" />
        <SwitchPreference
            app:icon="@drawable/ic_baseline_legend_toggle_24"
            app:key="bypassLan"
            app:title="@string/route_opt_bypass_lan" />
        <moe.matsuri.nb4a.ui.SimpleMenuPreference
            app:defaultValue="0"
            app:entries="@array/ipv6_mode"
            app:entryValues="@array/int_array_4"
            app:icon="@drawable/ic_image_looks_6"
            app:key="ipv6Mode"
            app:title="@string/ipv6"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
